# phonehome

./: .gitignore  Cargo.toml  README.md  config.example.toml  localtest.sh  make-tarball.sh  notes.txt  phonehome.spec  phonehome_server.service  phonehome_server.spec
.github/actions/create-tarball/: action.yml
.github/workflows/: build.yml  ci-cd.yml  copr.yml  release.yml
etc/bash-completion/: phonehome  phonehome_server
etc/logrotate.d/: phonehome
etc/phonehome/: config.toml
etc/phonehome_server/: config.toml
examples/: configuration_summary.rs  database_logger.sh  journald_test.rs  logging_demo.rs  output_types_demo.rs  sql_safety_test.rs  webhook_notifier.sh
src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  tls.rs  web.rs
tests/: integration_tests.rs  journald_logging_test.rs  output_type_integration_test.rs
usr/lib/systemd/system/: phonehome.service  phonehome_server.service
