[package]
name = "phonehome"
version = "0.1.0"
edition = "2021"
default-run = "phonehome"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tower = { version = "0.4", features = ["util"] }
rcgen = "0.11"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
