[package]
name = "phonehome"
version = "0.3.4"
edition = "2021"
default-run = "phonehome"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-journald = "0.3"
anyhow = "1.0"
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["fs"] }
sha2 = "0.10"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
